--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@nestjs/common": "^11.1.5",
     "@nestjs/core": "^11.1.5",
     "@nestjs/platform-express": "^11.1.5",
+    "dotenv": "^17.2.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^24.0.14",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   }
 }
