--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "bm-mcp",
   "type": "module",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && chmod 755 build/index.js"
+    "build": "tsc && cp .env build/.env 2>/dev/null || echo '.env file not found, will use defaults' && chmod 755 build/index.js",
+    "start": "node build/index.js"
   },
   "keywords": [],
   "author": "",
